--- a/common.sty
+++ b/common.sty
@@ -1,4 +1,4 @@
-% !TeX root = sd-lab-template.tex
+% !TeX root = sd-lab-presentation.tex
 %******************************************************************************%
 % Packages
 \usepackage[english]{babel}
